...
            android:src="@drawable/bg_onion_puks"
            tools:src="@drawable/bg_onion_puks"
            tools:visibility="visible" />


        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/connection_status_bar_vertical_padding"
            android:paddingHorizontal="@dimen/connection_status_bar_horizontal_padding"
            android:background="@color/surface"
            android:minHeight="?attr/actionBarSize"
...
            app:layout_constraintBottom_toTopOf="@+id/lower_guideline_action_btns"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/upper_guideline_action_btns">

            <TextView
                android:id="@+id/tv_connect_action_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:paddingHorizontal="@dimen/compact_padding"
                tools:background="@drawable/av_connect_to_cancel"
                android:clickable="true"
...
